; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-asid.c_match.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-asid.c_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptunit_result = type { i32 }
%struct.pt_asid = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match() #0 {
  %1 = alloca %struct.ptunit_result, align 4
  %2 = alloca %struct.pt_asid, align 4
  %3 = alloca %struct.pt_asid, align 4
  %4 = alloca i32, align 4
  %5 = call i32 @pt_asid_init(%struct.pt_asid* %2)
  %6 = call i32 @pt_asid_init(%struct.pt_asid* %3)
  %7 = getelementptr inbounds %struct.pt_asid, %struct.pt_asid* %2, i32 0, i32 0
  store i32 8960, i32* %7, align 4
  %8 = getelementptr inbounds %struct.pt_asid, %struct.pt_asid* %3, i32 0, i32 0
  store i32 8960, i32* %8, align 4
  %9 = getelementptr inbounds %struct.pt_asid, %struct.pt_asid* %2, i32 0, i32 1
  store i32 143360, i32* %9, align 4
  %10 = getelementptr inbounds %struct.pt_asid, %struct.pt_asid* %3, i32 0, i32 1
  store i32 143360, i32* %10, align 4
  %11 = call i32 @pt_asid_match(%struct.pt_asid* %2, %struct.pt_asid* %3)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @ptu_int_eq(i32 %12, i32 1)
  %14 = call i32 (...) @ptu_passed()
  %15 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  ret i32 %17
}

declare dso_local i32 @pt_asid_init(%struct.pt_asid*) #1

declare dso_local i32 @pt_asid_match(%struct.pt_asid*, %struct.pt_asid*) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
